<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/fan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fan_name" />

    <ToggleButton
        android:id="@+id/fan_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/switch_selector"/>

    <TextView
        android:id="@+id/fan_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="16dp"
        android:text="@string/speed" />

    <Button
        android:id="@+id/fan_speed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:background="@drawable/button_selector"
        android:layout_marginRight="16dp"
        android:text="@string/_1" />

    <Button
        android:id="@+id/fan_speed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:layout_marginRight="16dp"
        android:text="@string/_2" />

    <Button
        android:id="@+id/fan_speed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:layout_marginRight="16dp"
        android:text="@string/_3" />

    <Button
        android:id="@+id/fan_speed4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/_4" />

</LinearLayout>
